--- a/thinking-in-spring/generic/pom.xml
+++ b/thinking-in-spring/generic/pom.xml
@@ -12,8 +12,8 @@
 
     <artifactId>generic</artifactId>
 
-    <properties>
-        <spring.version>4.3.26.RELEASE</spring.version>
-    </properties>
+<!--    <properties>-->
+<!--        <spring.version>4.3.26.RELEASE</spring.version>-->
+<!--    </properties>-->
 
 </project>
